# Spectremesh

./: .gitignore  CHANGELOG_M0.2.md  CHANGELOG_YUNET_MIGRATION.md  Cargo.toml  README.md  demo_m0-2.sh  demo_m0.sh  spectremesh_debug_frame_10.txt  spectremesh_debug_frame_12.txt  spectremesh_debug_frame_15.txt
assets/models/: README.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  types.rs
crates/fear_sensor/: Cargo.toml
crates/fear_sensor/src/: calibration.rs  lib.rs  mock_sensor.rs  onnx_sensor.rs  sensor.rs
crates/game/: Cargo.toml
crates/game/src/: components.rs  lib.rs  main.rs  resources.rs
crates/game/src/systems/: mod.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: chunk.rs  generator.rs  lib.rs  noise.rs
docs/: API_REFERENCE.md  API_REFERENCE_M0.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_INDEX.md  IDEA.md  M0_TO_M0.5_HANDOFF.md  MILESTONE_M0_COMPLETION.md  PROJECT_APPROACH.md  TECHNICAL_ARCHITECTURE.md
spectre_sensor/: Cargo.toml
spectre_sensor/models/: README.md
spectre_sensor/proto/: sensor.proto
spectre_sensor/src/: calibrator.rs  compat.rs  config.rs  grpc_client.rs  grpc_server.rs  lib.rs  metrics.rs  permissions.rs  sensor.rs  types.rs  yunet.rs
spectre_sensor/tests/: integration_compat.rs
