[workspace]
members = [
    "crates/core",
    "crates/terrain",
    "crates/game",
    "spectre_sensor",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies with exact versions
bevy = { version = "0.16", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
async-channel = "2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

# Computer vision and ML
opencv = { version = "0.94", default-features = false }
ort = { version = "2.0.0-rc.10" }
ndarray = "0.15"

# Noise and terrain
fastnoise-lite = "1.0"

# Configuration and serialization
toml = "0.8"
dirs = "5.0"

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Metrics and monitoring
prometheus = "0.13"
axum = "0.7"
tower = "0.4"

# System utilities
num_cpus = "1.16"

# Development dependencies
async-trait = "0.1"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Profile configurations
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies in dev mode for better performance
