[package]
name = "spectremesh"
version = "0.1.0"
edition = "2021"
authors = ["SpectreMesh Team"]
description = "Procedural horror terrain that feeds on player fear"
license = "MIT"

[[bin]]
name = "spectremesh"
path = "src/main.rs"

[[bin]]
name = "spectreprobe"
path = "src/bin/spectreprobe.rs"

[dependencies]
# Workspace crates
spectremesh-core = { path = "../core" }
spectremesh-terrain = { path = "../terrain" }
spectre-sensor = { path = "../../spectre_sensor" }

# Bevy with required features
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "bevy_scene",
    "x11",  # Linux
    "wayland",  # Linux
    "multi_threaded",  # Required for file_watcher
    "file_watcher",  # Asset hot-reloading
    "png",
    "hdr",
    "ktx2",
    "zstd",
] }

# Async runtime
tokio = { workspace = true }
async-channel = { workspace = true }

# Configuration
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

[features]
default = []
mock-fear = ["spectre-sensor/mock"]  # For testing without camera (now uses modern mock)
debug-overlay = []  # Always show debug UI

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
